--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Hello world!</h1>
     <p>This is my first page in Git!</p>
     <img src="bilde.jpg" alt="">
-
+<h1>hello</h1>
 </body>
 </html>
